SkyXplore - Interface based game saving